# crow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  crow.yml  crow.yml.example  docker-compose.yml  pyproject.toml  scaffold-defaults.yml  scaffold.config.yml  scaffold.yml
.github/workflows/: ci.yml  publish.yml
crow/agents/: format.py  knowledge.py  registry.py
crow/agents/definitions/: monitor.py  pa.py  planner.py  reviewer.py
crow/agents/prompts/: dreamer_system.md.j2  monitor_system.md.j2  pa_system.md.j2  personal_agent.md.j2  planner_system.md.j2  reviewer_system.md.j2
crow/agents/tools/: __init__.py  delegate.py  devbot.py  knowledge.py  pilot.py
crow/auth/: api_keys.py  dependencies.py  email.py  middleware.py  session.py
crow/cli/: init.py  main.py
crow/config/: loader.py  settings.py
crow/db/: database.py  migrate.py
crow/db/migrations/: 001_initial.sql  002_pgvector.sql  003_config.sql  004_auth.sql  005_drop_phone_links.sql  006_agent_shares.sql  007_mcp_headers.sql  008_state.sql  009_dashboard_views.sql  010_user_scoping.sql  (+18 more)
crow/events/: bus.py  types.py
crow/gateways/: base.py
crow/llm/: client.py  registry.py
crow/notifications/: apns.py
crow/renderers/: __init__.py  chart.py
crow/router/: router.py
crow/server/: app.py  reaper.py  scheduler.py  websocket.py
crow/worker/: context.py  executor.py  loop.py  mcp_client.py  prompt.py
docs/: scaffold-plan.md
tests/: test_store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
(+79 files in other folders)
