[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crow-agents"
dynamic = ["version"]
description = "Agent coordination and monitoring system"
readme = "README.md"
license = "LicenseRef-FCL-1.0-ALv2"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40,<1",
    "asyncpg>=0.29,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "jinja2>=3,<4",
    "mcp>=1.0,<2",
    "pydantic[email]>=2,<3",
    "pydantic-settings>=2,<3",
    "PyJWT>=2,<3",
    "pyyaml>=6,<7",
    "rich>=13,<14",
    "typer>=0.12,<1",
    "uvicorn>=0.30,<1",
    "watchdog>=4,<5",
    "croniter>=2,<4",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.4,<1",
]

[project.scripts]
crow = "crow.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["crow"]

[tool.hatch.version]
path = "crow/__version__.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
